--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "luau"
+name = "luau-src"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+build = "build.rs"
+description = "Luau source code bindings"
+license = "MIT"
 
 [lib]
 crate-type = ["lib"]
