Vendor autocxx, Add unit tests, Add example
Fixes #2 Fixes #1

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
-[submodule "luau"]
-	path = luau
-	url = https://github.com/Roblox/luau
+[submodule "vendor/luau"]
+	path = vendor/luau
+	url = https://github.com/Roblox/luau.git
+[submodule "vendor/autocxx"]
+	path = vendor/autocxx
+	url = https://github.com/google/autocxx.git
+	branch = cint_pod
