--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,13 @@ crate-type = ["lib"]
 
 [dependencies]
 cxx = "1.0.51"
-autocxx = "0.13.0"
+autocxx = { path = "vendor/autocxx", version = "0.13.0" }
 
 [build-dependencies]
 walkdir = "2.3.2"
 bindgen = "0.59.1"
 cc = "1.0.71"
-autocxx-build = "0.12.0"
+autocxx-build = { path = "vendor/autocxx/gen/build", version = "0.13.0" }
 
 [features]
 default = []
