Don't clone submodules recursively
Hopefully this doesn't kill me later

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         with:
-          submodules: recursive
+          submodules: true
 
       - uses: actions-rs/toolchain@v1
         with:
