--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,16 @@ jobs:
       with:
         submodules: true
 
+    - name: Install LLVM and Clang
+      uses: KyleMayes/install-llvm-action@v1.4.0
+      with:
+        version: "11.0"
+        directory: ${{ runner.temp }}/llvm
+
+    - name: Set LIBCLANG_PATH
+      run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
+
+
     - name: Build
       run: cargo build --verbose
 
