--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -18,6 +18,15 @@ jobs:
             components: clippy
             override: true
 
+    - name: Install LLVM and Clang
+      uses: KyleMayes/install-llvm-action@v1.4.0
+      with:
+        version: "11.0"
+        directory: ${{ runner.temp }}/llvm
+
+    - name: Set LIBCLANG_PATH
+      run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
+
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
