--- a/luau-src/Cargo.toml
+++ b/luau-src/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "luau-src"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 build = "build.rs"
 description = "Luau source code bindings"
@@ -11,10 +11,10 @@ crate-type = ["lib"]
 
 [build-dependencies]
 bindgen = "0.59.1"
-cc = "1.0.71"
+cc = { version = "1.0.71", optional = true }
 
 [features]
 default = ["link"]
 
 # Link / Compile Luau. This is enabled by default.
-link = []
+link = ["cc"]
