--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -12,12 +12,6 @@ jobs:
         with:
           submodules: true
 
-      - uses: actions-rs/toolchain@v1
-        with:
-            toolchain: nightly
-            components: clippy
-            override: true
-
     - name: Install LLVM and Clang
       uses: KyleMayes/install-llvm-action@v1.4.0
       with:
@@ -31,3 +25,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --no-default-features --tests
+
+    - name: Run clippy
+      run: cargo clippy --verbose
